--- a/quiz/2_address-book/tsconfig.json
+++ b/quiz/2_address-book/tsconfig.json
@@ -4,7 +4,10 @@
     "checkJs": true,
     "target": "es5",
     "lib": ["es2015", "dom", "dom.iterable"],
-    "noImplicitAny": false
+    // 세가지 옵션 true로 추가
+    "noImplicitAny": true,
+    "strict": true,
+    "strictFunctionTypes": true
   },
   "include": ["./src/**/*"]
 }
